--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -3,19 +3,6 @@
     xmlns:mvc="sap.ui.core.mvc"
     displayBlock="true">
    <Shell>
-     <App class="myAppDemoWT">
-        <pages>
-            <Page title="{i18n>homePageTitle}">
-                <headerContent>
-                    <Button icon="sap-icon://hello-world" press=".onOpenDialog"/>
-                </headerContent>
-                <content>
-                    <mvc:XMLView viewName="sapui.view.Panel"/>
-
-                    <mvc:XMLView viewName="sapui.view.InvoiceList"/>
-                </content>
-            </Page>
-        </pages>
-    </App>
+     <App class="myAppDemoWT" id="app"/>
    </Shell>
 </mvc:View>
