--- a/webapp/view/InvoiceList.view.xml
+++ b/webapp/view/InvoiceList.view.xml
@@ -31,8 +31,10 @@ xmlns:mvc="sap.ui.core.mvc">
                 }
             }"
             numberUnit="{view>/currency}"
-            numberState="{= ${invoice>ExtendedPrice} > 50 ? 'Error' : 'Success'}">
-           
+            numberState="{= ${invoice>ExtendedPrice} > 50 ? 'Error' : 'Success'}"
+            type="Navigation"
+            press="onPress">
+
                 <firstStatus>
                     <ObjectStatus text="{
                         
